--- a/src/styles.css
+++ b/src/styles.css
@@ -764,3 +764,30 @@ progress::-ms-fill {
         -1px 0 0 #000, 1px 0 0 #000;
     top: 0.375rem;
 }
+
+.progressDiv {
+    position: absolute;
+    background-color: black;
+    color: #fff;
+    top: 0px;
+    left: auto;
+    right: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    z-index: 20;
+    display: none;
+}
+
+.mergedImageDiv {
+    position: absolute;
+    top: 25px;
+    z-index: 10;
+    width: 400px;
+    background-color: white;
+    display: none;
+}
