Do not display the canvas during stiching to speed up the process

--- a/src/styles.css
+++ b/src/styles.css
@@ -783,7 +783,7 @@ progress::-ms-fill {
     display: none;
 }
 
-.mergedImageDiv {
+.canvasDiv {
     position: absolute;
     top: 25px;
     z-index: 10;
