Start to assemble the tiles in two parts, left and right, download them first, and merge them for the entire map

--- a/src/styles.css
+++ b/src/styles.css
@@ -791,3 +791,23 @@ progress::-ms-fill {
     background-color: white;
     display: none;
 }
+
+.canvasDivLeft {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    z-index: 10;
+    width: 400px;
+    background-color: white;
+    display: none;
+}
+
+.canvasDivRight {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    z-index: 10;
+    width: 400px;
+    background-color: white;
+    display: none;
+}
