--- a/src/styles.css
+++ b/src/styles.css
@@ -222,13 +222,15 @@ dt {
     background-color: #dfe6ed;
     box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.20);
     height: auto;
+    max-height: 100vh;
     left: 0;
     opacity: 0.85;
     padding: 0.75em 0.75em 1.25em 0.75em;
     position: absolute;
     top: 0;
     transform: translateX(-100%);
-    width: 23.5em;
+    width: 25.5em;
+    overflow-y: auto;
 }
 
 .infotable {
