--- a/src/styles.css
+++ b/src/styles.css
@@ -470,6 +470,22 @@ input[type="number"] {
     width: 15.25em;
 }
 
+.textInput {
+    background-color: #fff;
+    border: 0;
+    border-radius: 0.25em;
+    font-size: 1em;
+    height: 1.375em;
+    line-height: 1.375em;
+    margin-right: 0.375rem;
+    overflow: hidden;
+    text-align: left;
+    transition: width 0.25s, min-width 0.25s;
+    white-space: nowrap;
+    width: 23em;
+
+}
+
 input[type="range"] {
     background: #fff;
     border: 1px solid #afb5ba;
