--- a/src/styles.css
+++ b/src/styles.css
@@ -829,3 +829,47 @@ progress::-ms-fill {
     background-color: white;
     display: none;
 }
+
+.mapBoxTokenGroup {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+.mapBoxToken {
+    background-color: #fff;
+    border: 0;
+    border-radius: 0.25em;
+    font-size: 1em;
+    height: 1.375em;
+    line-height: 1.375em;
+    margin-right: 0.375rem;
+    overflow: hidden;
+    text-align: left;
+    transition: width 0.25s, min-width 0.25s;
+    white-space: nowrap;
+    width: 18em;
+
+}
+
+.mapBoxTokenMessage {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+    color: red;
+    font-weight: bold;
+    display: none;
+}
+
+.inline-block-child {
+    display: inline-block;
+    /* float: left; */
+    /* display: inline-flex;*/
+}
+
+button.save {
+    font-size: 0.8125rem;
+    padding-right: 8px;
+    /* display: inline-block;*/
+}
