--- a/src/styles.css
+++ b/src/styles.css
@@ -835,6 +835,7 @@ progress::-ms-fill {
     display: flex;
     flex-direction: row;
     position: relative;
+    vertical-align: bottom;
 }
 
 .mapBoxToken {
@@ -844,7 +845,8 @@ progress::-ms-fill {
     font-size: 1em;
     height: 1.375em;
     line-height: 1.375em;
-    margin-right: 0.375rem;
+    margin-right: 0px;
+    margin-top: 3px;
     overflow: hidden;
     text-align: left;
     transition: width 0.25s, min-width 0.25s;
@@ -866,6 +868,23 @@ progress::-ms-fill {
     display: inline-block;
     /* float: left; */
     /* display: inline-flex;*/
+}
+
+.save-button {
+    background-color: #0078f0;
+    border-radius: 0.25em;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.20);
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    flex: 0 0 auto;
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 1rem;
+    margin-left: 1em;
+    margin-top: 0px;
+    padding: 0.375em 16px 0.375em 12px;
+    text-decoration: none;
 }
 
 button.save {
